--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ dash-table==5.0.0
 filelock==3.15.4
 Flask==3.0.3
 fsspec==2024.6.1
+gunicorn==22.0.0
 idna==3.7
 importlib_metadata==8.0.0
 itsdangerous==2.2.0
