--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+-f https://download.pytorch.org/whl/torch_stable.html
 dash==2.17.1
 dash-core-components==2.0.0
 dash-html-components==2.0.0
@@ -11,4 +12,4 @@ spacy==3.7.5
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 torch==2.3.0+cpu
-torchtext==0.18.0
+torchtext==0.18.0+cpu
